# opportunity-crawler

./: .gitignore  2026-04-24-smart-opportunity-crawler-design.md  package.json  pyproject.toml
docs/designs/: 2026-04-24-001-smart-opportunity-crawler-technical-design.md
docs/plans/: 2026-04-24-001-feat-smart-opportunity-crawler-plan.md  2026-04-24-002-control-panel-real-data-plan.md
docs/runbooks/: local-desktop-packaging.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: main.ts  vite-env.d.ts
migrations/versions/: 20260424_001_initial_schema.py
packaging/defaults/: agent.toml  all_in_one.toml  control_plane.toml
packaging/pyinstaller/: agent.spec  all_in_one.spec  common.py  control_plane.spec
scripts/: package_app.sh  run_agent_dev.py  run_control_plane_dev.py  start_agent.sh  start_backend.sh  start_dev.sh  start_frontend.sh
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/opportunity_crawler/: __init__.py
tests/e2e/: test_control_panel_workflow.py
tests/integration/: __init__.py  api_helpers.py  test_agent_registration.py  test_api_auth.py  test_api_opportunities.py  test_api_permissions.py  test_api_source_rules.py  test_api_sources.py  test_collection_runtime_dispatch.py  test_control_panel_queries.py  test_event_stream.py  test_health_endpoint.py  test_identity_role_seed.py  test_manual_import.py  test_notification_logs.py  test_public_source_collection.py  test_review_workflow.py  test_schema_constraints.py  (+2 more)
(+169 files in other folders)
